Improve input code and make it working the custom alert action regarding application segments. Adding audit dashboard and few examples on how to use the commands

--- a/TA-zscaler-api/default/data/ui/alerts/zscaler_zpa_action.html
+++ b/TA-zscaler-api/default/data/ui/alerts/zscaler_zpa_action.html
@@ -12,7 +12,9 @@
 	<label class="control-label" for="zscaler_zpa_action_action">Action <span class="required">*</span> </label>
     <div class="controls">
 <select name="action.zscaler_zpa_action.param.action" id="zscaler_zpa_action_action">
-        <option value="create_app_segment">Create new app segment(s)</option>
+        <option value="create_app_segment">App Segment: Create</option>
+        <option value="update_app_segment">App Segment: Update</option>
+        <option value="delete_app_segment">App Segment: Delete</option>
 </select>
                 <span class="help-block"> 
                     Indicates which kind of action you want to perform
