Update pyZscaler code and improve the current dashboard to generate one action in ZPA with Application Segments + Few fixes

--- a/TA-zscaler-api/default/data/ui/alerts/zscaler_zpa_action.html
+++ b/TA-zscaler-api/default/data/ui/alerts/zscaler_zpa_action.html
@@ -15,6 +15,7 @@
         <option value="create_app_segment">App Segment: Create</option>
         <option value="update_app_segment">App Segment: Update</option>
         <option value="delete_app_segment">App Segment: Delete</option>
+        <option value="create_segment_group">Segment Group: Create</option>
 </select>
                 <span class="help-block"> 
                     Indicates which kind of action you want to perform
