Fixing issues - Adding an Input UID to identify an event recovery performed by an input at one time - Adding a Zscaler instance in order to identify which input was executed (if we want to have several inputs) - Fix dashboards issues with logs recovery

--- a/TA-zscaler-api/default/data/ui/alerts/zscaler_zpa_action.html
+++ b/TA-zscaler-api/default/data/ui/alerts/zscaler_zpa_action.html
@@ -1,8 +1,8 @@
 <form class="form-horizontal form-complex">
 <div class="control-group">
-	<label class="control-label" for="zscaler_zpa_action_account_name">Account name <span class="required">*</span> </label>
+	<label class="control-label" for="zscaler_zpa_action_account_username">Account username <span class="required">*</span> </label>
     <div class="controls">
-	<input type="text" name="action.zscaler_zpa_action.param.account_name" id="zscaler_zpa_action_account_name"/>
+	<input type="text" name="action.zscaler_zpa_action.param.account_username" id="zscaler_zpa_action_account_username"/>
                 <span class="help-block"> 
                     Specify the name of the account you want to use (username)
                 </span>
