--- a/TA-zscaler-api/default/data/ui/alerts/zscaler_zpa_action.html
+++ b/TA-zscaler-api/default/data/ui/alerts/zscaler_zpa_action.html
@@ -1,10 +1,19 @@
 <form class="form-horizontal form-complex">
 <div class="control-group">
-	<label class="control-label" for="zscaler_zpa_action_account_username">Account username <span class="required">*</span> </label>
+	<label class="control-label" for="zscaler_zpa_action_instances">Instance(s) <span class="required">*</span> </label>
     <div class="controls">
-	<input type="text" name="action.zscaler_zpa_action.param.account_username" id="zscaler_zpa_action_account_username"/>
+	<input type="text" name="action.zscaler_zpa_action.param.instances" id="zscaler_zpa_action_instances"/>
                 <span class="help-block"> 
-                    Specify the name of the account you want to use (username)
+                    Indicate which instances you want to perform the action (it has to be only one number identifying the instance or a list separated by a comma)
+                </span>
+    </div>
+</div>
+<div class="control-group">
+	<label class="control-label" for="zscaler_zpa_action_account_usernames">Account usernames <span class="required">*</span> </label>
+    <div class="controls">
+	<input type="text" name="action.zscaler_zpa_action.param.account_usernames" id="zscaler_zpa_action_account_usernames"/>
+                <span class="help-block"> 
+                    Specify the name of the account you want to use (username) for each instance as a dictionnary
                 </span>
     </div>
 </div>
