Fix issues + review current way of handling several accounts (not using a dict anymore, use dedicated fields)

--- a/TA-zscaler-api/default/data/ui/alerts/zscaler_zia_execute_action.html
+++ b/TA-zscaler-api/default/data/ui/alerts/zscaler_zia_execute_action.html
@@ -9,11 +9,29 @@
     </div>
 </div>
 <div class="control-group">
-	<label class="control-label" for="zscaler_zia_execute_action_account_usernames">Account usernames <span class="required">*</span> </label>
+	<label class="control-label" for="zscaler_zia_execute_action_account_username_instance_1">Account username (Instance 1) <span class="required">*</span> </label>
     <div class="controls">
-	<input type="text" name="action.zscaler_zia_execute_action.param.account_usernames" id="zscaler_zia_execute_action_account_usernames"/>
+	<input type="text" name="action.zscaler_zia_execute_action.param.account_username_instance_1" id="zscaler_zia_execute_action_account_username_instance_1"/>
                 <span class="help-block"> 
-                    Specify the name of the account you want to use (username) for each instance as a dictionnary
+                    If you specified that you want to use "Instance 1", specify the name of the account you want to use (username). Otherwise, let the default value "-".
+                </span>
+    </div>
+</div>
+<div class="control-group">
+	<label class="control-label" for="zscaler_zia_execute_action_account_username_instance_2">Account username (Instance 2) <span class="required">*</span> </label>
+    <div class="controls">
+	<input type="text" name="action.zscaler_zia_execute_action.param.account_username_instance_2" id="zscaler_zia_execute_action_account_username_instance_2"/>
+                <span class="help-block"> 
+                    If you specified that you want to use "Instance 2", specify the name of the account you want to use (username). Otherwise, let the default value "-".
+                </span>
+    </div>
+</div>
+<div class="control-group">
+	<label class="control-label" for="zscaler_zia_execute_action_account_username_instance_3">Account username (Instance 3) <span class="required">*</span> </label>
+    <div class="controls">
+	<input type="text" name="action.zscaler_zia_execute_action.param.account_username_instance_3" id="zscaler_zia_execute_action_account_username_instance_3"/>
+                <span class="help-block"> 
+                    If you specified that you want to use "Instance 3", specify the name of the account you want to use (username). Otherwise, let the default value "-".
                 </span>
     </div>
 </div>
