Add function "Remove URLs from a category" for ZIA + Fix few issues

--- a/TA-zscaler-api/default/data/ui/alerts/zscaler_zia_execute_action.html
+++ b/TA-zscaler-api/default/data/ui/alerts/zscaler_zia_execute_action.html
@@ -39,7 +39,8 @@
 	<label class="control-label" for="zscaler_zia_execute_action_action">Action <span class="required">*</span> </label>
     <div class="controls">
 <select name="action.zscaler_zia_execute_action.param.action" id="zscaler_zia_execute_action_action">
-        <option value="add_urls_to_category">Add URLs to category</option>
+        <option value="delete_urls_from_category">Category: Delete URLs </option>
+        <option value="add_urls_to_category">Category: Add URLs</option>
 </select>
                 <span class="help-block"> 
                     Indicates which kind of action you want to perform
